external-crates/move/crates/move-compiler/tests/move_2024/expansion/module_alias_as_type.move
module 0x2::X {}

module 0x2::M {
    use 0x2::X;
    fun foo(x: X) { x; }
}
